--- a/Vectorize/Vectorize.Sample/Vectorize.Sample.csproj
+++ b/Vectorize/Vectorize.Sample/Vectorize.Sample.csproj
@@ -4,6 +4,7 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<RootNamespace>Vectorize.Sample</RootNamespace>
+		<OutputType>Exe</OutputType>
 	</PropertyGroup>
 
 	<ItemGroup>
