--- a/Vectorize/Vectorize.SourceGenerator/Vectorize.SourceGenerator.csproj
+++ b/Vectorize/Vectorize.SourceGenerator/Vectorize.SourceGenerator.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
@@ -14,12 +14,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Bcl.Numerics" Version="9.0.1" />
+		<PackageReference Include="Microsoft.Bcl.Numerics" Version="9.0.2" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.12.0" />
 		<PackageReference Include="SourceGenerator.Foundations" Version="2.0.13" />
 	</ItemGroup>
 
