--- a/Vectorize/Vectorize.SourceGenerator/Vectorize.SourceGenerator.csproj
+++ b/Vectorize/Vectorize.SourceGenerator/Vectorize.SourceGenerator.csproj
@@ -21,6 +21,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
 		<PackageReference Include="SourceGenerator.Foundations" Version="2.0.13" />
+		<PackageReference Include="System.Collections.Immutable" Version="9.0.2" />
 	</ItemGroup>
 
 
