--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/Vectorize/Vectorize.SourceGenerator/bin/Debug/netstandard2.0
+/Vectorize/Vectorize.SourceGenerator/obj
+/Vectorize/Vectorize.Sample
