Update .gitignore to exclude bin and obj directories
Add `/bin` and `/obj` directories to the `.gitignore` file.

* Add `/bin` to the list of ignored directories
* Add `/obj` to the list of ignored directories

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/JanTamis/Vectorize?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /Vectorize/Vectorize.SourceGenerator/bin/Debug/netstandard2.0
 /Vectorize/Vectorize.SourceGenerator/obj
 /Vectorize/Vectorize.Sample
+/bin
+/obj
