Refactor BaseBuilder and InterfaceBuilder to improve method signatures and enhance collection handling; add EnumerableExtensions for additional LINQ-like functionality

--- a/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
+++ b/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
@@ -14,10 +14,20 @@
 
 	<ItemGroup>
 		<None Remove="DDD.UbiquitousLanguageRegistry.txt"/>
+		<None Remove="obj\**" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Include="obj\Debug\net9.0\Vectorize.Sample.AssemblyInfo.cs" />
+	  <Compile Remove="obj\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Remove="obj\**" />
 	</ItemGroup>
 
 </Project>
