--- a/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
+++ b/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
@@ -30,5 +30,18 @@
 		<PackageReference Include="SourceGenerator.Foundations.Contracts" Version="2.0.13" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Include="obj\Debug\netstandard2.0\Vectorize.SourceGenerator.AssemblyInfo.cs" />
+	  <Compile Remove="obj\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Remove="obj\**" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="obj\**" />
+	</ItemGroup>
+
 
 </Project>
