Refactor to use MetadataLoader and update project files
- Updated `.gitignore` to include new generated file paths.
- Added `using MetadataLoader` in `BaseTest.cs`, `ConstantParametersAnalyzer.cs`, and `UsageAnalyzer.cs`, modifying constant value retrieval methods.
- Modified `ConstExpr.SourceGenerator.csproj` to include `System.Runtime.Loader` and adjust resource handling.
- Refactored methods in `ConstExprSourceGenerator.cs`, `CompilationExtensions.cs`, `SyntaxHelpers.cs`, and `OperatorHelper.cs` to utilize `MetadataLoader` for type and value retrieval.
- Introduced `MetadataLoader.cs` to manage type loading from assemblies.
- Updated `EnumerableExtensions.cs` for nullable type handling.
- Updated assembly information in `AssemblyInfo.cs` for `Vectorize.Sample` and `Vectorize.SourceGenerator`.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@
 /Vectorize/Vectorize.Sample
 /bin
 /obj
+/Vectorize/ConstExpr.SourceGenerator/Generated
+/Vectorize/ConstExpr.SourceGenerator/obj
+/Vectorize/ConstExpr.SourceGenerator/bin/Debug/netstandard2.0
+/Vectorize/ConstExpr.Sample/bin/Debug/net9.0
+/Vectorize/ConstExpr.Sample/obj/Debug/net9.0
+/Vectorize/ConstExpr.Sample/obj
+/ConstExpr.Tests/bin/Debug/net9.0
+/ConstExpr.Tests/obj
