--- a/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
+++ b/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
@@ -29,6 +29,7 @@
 		</PackageReference>
 		<PackageReference Include="SourceGenerator.Foundations" Version="2.0.13" />
 		<PackageReference Include="SourceGenerator.Foundations.Contracts" Version="2.0.13" />
+		<PackageReference Include="System.Collections.Immutable" Version="9.0.3" />
 		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="9.0.3" />
 		<PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
 	</ItemGroup>
