Update .gitignore and clean up EditorConfig settings
- Added path to generated MSBuild EditorConfig in .gitignore.
- Removed multiple build property lines from
  ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig,
  indicating a reconfiguration of project settings.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Vectorize/ConstExpr.Sample/obj
 /ConstExpr.Tests/bin/Debug/net9.0
 /ConstExpr.Tests/obj
+/ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig
