Update project configuration and ignore settings
- Refined `.gitignore` to include output directories for `ConstExpr.Tests` and `ConstExpr.Sample`.
- Removed all global using directives in `ConstExpr.Tests.GlobalUsings.g.cs`.
- Changed target framework in `ConstExpr.Sample.csproj` from `net10.0` to `net9.0`.
- Re-added project reference to `ConstExpr.SourceGenerator`.
- Consolidated removal of `bin` and `obj` directories in project file.
- Retained `Microsoft.CodeAnalysis.CSharp` package reference.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /ConstExpr.Tests/bin/Debug/net9.0
 /ConstExpr.Tests/obj
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig
+/ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GlobalUsings.g.cs
