Refactor and enhance project structure and performance
Updated project files, assembly info, and code structure. Key changes include:
- Adjusted NuGet package paths in `ConstExpr.Tests.csproj.nuget.g.targets`.
- Added runtime version and updated informational version in `ConstExpr.Tests.AssemblyInfo.cs`.
- Updated project directory in `ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig`.
- Changed target framework from `net9.0` to `net10.0` in `ConstExpr.Sample.csproj`.
- Commented out several method signatures in `ICustomCollection.cs`.
- Introduced new functionality in `Main.cs` and updated performance level in `Test.cs`.
- Modified constructors and added new methods in `BaseBuilder.cs`, `InterfaceBuilder.cs`, `LinqBuilder.cs`, and `SpanBuilder.cs`.
- Enhanced `ConstExprSourceGenerator.cs` with new collection handling methods.
- Added vector operation support in `CompilationExtensions.cs`.
- Introduced utility methods in `EnumerableExtensions.cs` for zero and one checks.
- Created a new `VectorTypes` enumeration in `VectorTypes.cs`.

--- a/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
+++ b/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<RootNamespace>Vectorize.Sample</RootNamespace>
 		<OutputType>Exe</OutputType>
@@ -9,25 +9,24 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="bin\**" />
+	  <Compile Remove="obj\**" />
+	  <EmbeddedResource Remove="bin\**" />
+	  <EmbeddedResource Remove="obj\**" />
+	  <None Remove="bin\**" />
+	  <None Remove="obj\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<None Remove="DDD.UbiquitousLanguageRegistry.txt" />
-		<None Remove="obj\**" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Compile Include="obj\Debug\net9.0\Vectorize.Sample.AssemblyInfo.cs" />
-	  <Compile Remove="obj\**" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <EmbeddedResource Remove="obj\**" />
 	</ItemGroup>
 
 </Project>
