Update project files for cleanup and readability
- Updated `.gitignore` to include paths for generated files.
- Removed all content from `ConstExpr.Tests.AssemblyInfo.cs`.
- Cleaned up `ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig`.
- Improved readability and maintainability in `SpanBuilder.cs` with formatting adjustments and removal of redundant code.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GlobalUsings.g.cs
 /ConstExpr.Tests/obj/ConstExpr.Tests.csproj.nuget.g.props
+/ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.AssemblyInfo.cs
+/ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig
