Add build and test tasks to devcontainer.json
* Add "build" task to run `dotnet build ConstExpr.sln`
* Add "test" task to run `dotnet test`

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,9 @@
 		"ghcr.io/devcontainers/features/dotnet:2": {
         	"version": "9.0"
     	}
-	}
+  },
+  "tasks": {
+    "build": "dotnet build ConstExpr.sln",
+    "test": "dotnet test"
+  }
 }
