--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,6 @@
     	}
   },
   "tasks": {
-    "build": "dotnet build ConstExpr.sln",
-    "test": "dotnet test"
+    "build": "dotnet build ConstExpr.sln"
   }
 }
