--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,8 @@
     	}
   },
   "tasks": {
-    "build": "dotnet build ConstExpr.sln"
+    "build": "dotnet build ConstExpr.sln",
+    "test": "dotnet test",
+    "launch": "dotnet run --project Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj"
   }
 }
