Update .gitignore and clean up AssemblyInfo.cs
Added entry to .gitignore for ConstExpr.Tests.AssemblyInfo.cs.
Removed auto-generated comments and assembly attributes from
ConstExpr.Tests.AssemblyInfo.cs, indicating a change in
management of this file.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /ConstExpr.Tests/obj
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GlobalUsings.g.cs
+/ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.AssemblyInfo.cs
