Update .gitignore and refactor code in several files
- Added `ConstExpr.Tests.GlobalUsings.g.cs` to .gitignore.
- Removed unnecessary global using directives in `ConstExpr.Tests.GlobalUsings.g.cs`.
- Changed argument in `Main.cs` for `BinarySearch` from `3` to `2`.
- Refactored `countVec` construction in `MemoryExtensionsBuilder.cs` to use `CreateLiteral` for improved clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.AssemblyInfo.cs
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig
 /ConstExpr.Tests/obj/ConstExpr.Tests.csproj.nuget.g.targets
+/ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GlobalUsings.g.cs
