Integrate SourceGen.Utilities into the project
This commit adds a project reference to SourceGen.Utilities in the ConstExpr.SourceGenerator project and introduces new extension methods for compiler-related functionalities. Additionally, it refactors existing code to utilize the new IndentedCodeWriter for improved code generation and formatting. This enhances maintainability and readability of generated code. 🚀

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig
 /ConstExpr.Tests/obj/ConstExpr.Tests.csproj.nuget.g.targets
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GlobalUsings.g.cs
+!/SourceGen.Utilities/obj/
