Refactor code generation and improve formatting handling
- Updated `.gitignore` to exclude build artifacts for `SourceGen.Utilities`.
- Enhanced `IndentedCodeWriter` for better whitespace and formatting control.
- Added methods for formatting `ImmutableArray<ITypeParameterSymbol>` and `ImmutableArray<IParameterSymbol`.
- Cleaned up `SourceGen.Utilities.csproj` by removing unnecessary content entries.
- Renamed constant `Threshold` to `THRESHOLD` in `BaseBuilder.cs` for consistency.
- Ensured `DataName` is treated as a literal in `EnumerableBuilder`, `InterfaceBuilder`, and `MemoryExtensionsBuilder`.
- Improved source generation logic in `ConstExprSourceGenerator`.
- Modified `Average` method in `EnumerableExtensions` to return `null` for empty sources.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 /ConstExpr.Tests/obj/ConstExpr.Tests.csproj.nuget.g.targets
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GlobalUsings.g.cs
 !/SourceGen.Utilities/obj/
+/SourceGen.Utilities/bin/Debug/netstandard2.0
+/SourceGen.Utilities/obj
