Update .gitignore to exclude SourceGen.Utilities files
Added entries to the .gitignore file to prevent tracking of generated files from the SourceGen.Utilities project, specifically:
- .NETStandard,Version=v2.0.AssemblyAttributes.cs
- SourceGen.Utilities.AssemblyInfoInputs.cache

This keeps the repository cleaner and more manageable.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GeneratedMSBuildEditorConfig.editorconfig
 /ConstExpr.Tests/obj/ConstExpr.Tests.csproj.nuget.g.targets
 /ConstExpr.Tests/obj/Debug/net9.0/ConstExpr.Tests.GlobalUsings.g.cs
+/SourceGen.Utilities/obj/Debug/netstandard2.0/.NETStandard,Version=v2.0.AssemblyAttributes.cs
+/SourceGen.Utilities/obj/Debug/netstandard2.0/SourceGen.Utilities.AssemblyInfoInputs.cache
