Update project configuration and clean up files
- Enhanced `.gitignore` to exclude additional `obj` and `bin` directories and cache files for `SourceGen.Utilities`.
- Deleted unnecessary binary files: `SourceGen.Utilities.assets.cache` and `SourceGen.Utilities.csproj.AssemblyReference.cache`.
- Removed the entire content of `SourceGen.Utilities.csproj.nuget.dgspec.json`, indicating a potential restructuring of project dependencies.
- Cleared `project.assets.json`, suggesting a need for regeneration due to project changes.
- Reset `project.nuget.cache`, removing previous package file references and logs.

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,8 @@
 /SourceGen.Utilities/obj
 /SourceGen.Utilities/obj/Debug/netstandard2.0/.NETStandard,Version=v2.0.AssemblyAttributes.cs
 /SourceGen.Utilities/obj/Debug/netstandard2.0/SourceGen.Utilities.AssemblyInfoInputs.cache
+/SourceGen.Utilities/obj/Debug/netstandard2.0/SourceGen.Utilities.assets.cache
+/SourceGen.Utilities/obj/Debug/netstandard2.0/SourceGen.Utilities.csproj.AssemblyReference.cache
+/SourceGen.Utilities/obj/project.assets.json
+/SourceGen.Utilities/obj/project.nuget.cache
+/SourceGen.Utilities/obj/SourceGen.Utilities.csproj.nuget.dgspec.json
