Enhance source generator and project configurations
- Updated `.gitignore` to exclude additional build artifacts.
- Added `<EmitCompilerGeneratedFiles>` and set `<ConstExprGenerationLevel>` to `Performance` in `ConstExpr.Sample.csproj`.
- Introduced new package reference for `ConstExpr.SourceGenerator`.
- Refactored `Main.cs` to improve method calls and variable usage.
- Modified `Test` class attributes and refactored methods for clarity.
- Updated `ConstExpr.SourceGenerator.csproj` with new metadata properties and `PrivateAssets` attributes for project references.
- Added `ConstExpr.SourceGenerator.props` and `ConstExpr.SourceGenerator.targets` for build management.
- Improved structure and maintainability of methods in `ConstExprSourceGenerator.cs` and `InvocationModel`.

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@
 /SourceGen.Utilities/obj/project.assets.json
 /SourceGen.Utilities/obj/project.nuget.cache
 /SourceGen.Utilities/obj/SourceGen.Utilities.csproj.nuget.dgspec.json
+/ConstExpr.Tests/bin/Release/net9.0
+/SourceGen.Utilities/bin/Release/netstandard2.0
+/Vectorize/ConstExpr.SourceGenerator/bin
