Refactor code for improved readability and performance
This commit refactors several methods to enhance readability by replacing 'using' statements with variable assignments for the MetadataLoader. Additionally, it renames the UsageAnalyzer class to BodyAnalyzer for better clarity on its purpose. The changes also include adjustments to method signatures and logic to ensure consistency and maintainability. 🚀

--- a/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
+++ b/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
@@ -23,9 +23,9 @@
 	  <None Remove="obj\**" />
 	</ItemGroup>
 
-	<!--<ItemGroup>
+	<ItemGroup>
 		<ProjectReference Include="..\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-	</ItemGroup>-->
+	</ItemGroup>
 
 	<!--<ItemGroup>
 		<CompilerVisibleProperty Include="ConstExprGenerationLevel" />
@@ -36,7 +36,7 @@
 	  <PackageReference Include="BenchmarkDotNet.Annotations" Version="0.14.0" />
 	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
 		
-		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.4-preview" />
+<!--		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.4-preview" />-->
 	</ItemGroup>
 
 </Project>
