--- a/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
+++ b/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
@@ -24,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+		<!--<ProjectReference Include="..\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
 	</ItemGroup>
 
 	<!--<ItemGroup>
@@ -34,9 +34,8 @@
 	<ItemGroup>
 	  <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
 	  <PackageReference Include="BenchmarkDotNet.Annotations" Version="0.14.0" />
-	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
 		
-<!--		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.4-preview" />-->
+		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.6-preview" />
 	</ItemGroup>
 
 </Project>
