Add IsPrimitiveType method and enhance project references
This commit introduces a new extension method `IsPrimitiveType` to determine if a given type is a primitive type. Additionally, it updates project references and modifies method signatures for improved clarity and consistency. These changes aim to enhance type handling and improve code readability. 🚀

--- a/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
+++ b/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
@@ -24,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<!--<ProjectReference Include="..\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
+		<ProjectReference Include="..\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 	<!--<ItemGroup>
@@ -35,7 +35,7 @@
 	  <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
 	  <PackageReference Include="BenchmarkDotNet.Annotations" Version="0.14.0" />
 		
-		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.6-preview" />
+<!--		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.6-preview" />-->
 	</ItemGroup>
 
 </Project>
