--- a/SourceGen.Utilities/SourceGen.Utilities.csproj
+++ b/SourceGen.Utilities/SourceGen.Utilities.csproj
@@ -7,13 +7,17 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.12.0" />
-	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.12.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="4.14.0">
+	    <PrivateAssets>all</PrivateAssets>
+	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.14.0" />
+	  <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
 	  <PackageReference Include="PolySharp" Version="1.15.0">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-	  <PackageReference Include="System.Collections.Immutable" Version="8.0.0" />
+	  <PackageReference Include="System.Collections.Immutable" Version="9.0.7" />
 	  <PackageReference Include="System.Memory" Version="4.6.3" />
 	</ItemGroup>
 
