Refactor code for readability and consistency
- Updated `IndentedCodeWriter.cs` to streamline `using` directives and modify tuple item addition.
- Commented out a line in `BaseBuilder.cs` to adjust access modifiers and changed method string display.
- Enhanced `ConstExpr.SourceGenerator.csproj` by adding an `ItemGroup` to clean up build output.
- Renamed variable in `ConstExprSourceGenerator.cs` for consistency.
- Modified `GetVariableName` method in `ConstExprOperationVisitor.Helpers.cs` to return `null` for unmatched cases.
- Significant updates in `ConstExprOperationVisitor.cs`, including constant renaming and new operation methods for improved clarity.

--- a/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
+++ b/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
@@ -22,7 +22,16 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<IsPackable>true</IsPackable>
 
-	</PropertyGroup>	
+	</PropertyGroup>
+
+	<ItemGroup>
+	  <Compile Remove="bin\**" />
+	  <Compile Remove="Generated\**" />
+	  <EmbeddedResource Remove="bin\**" />
+	  <EmbeddedResource Remove="Generated\**" />
+	  <None Remove="bin\**" />
+	  <None Remove="Generated\**" />
+	</ItemGroup>	
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Bcl.Numerics" Version="9.0.7" />
