Refactor vector type handling and improve code clarity
This commit enhances the handling of vector types by ensuring that the type is explicitly converted to a literal string format in various locations. This change improves code readability and consistency, making it clearer how vector types are utilized throughout the codebase. Additionally, it removes commented-out code and unnecessary lines to streamline the implementation. 🛠️

--- a/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
+++ b/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
@@ -10,16 +10,16 @@
 
 		<UseConstExpr>true</UseConstExpr>
 
-		<!--<InterceptorsNamespaces>$(InterceptorsNamespaces);ConstantExpression.Generated</InterceptorsNamespaces>-->
+		<InterceptorsNamespaces>$(InterceptorsNamespaces);ConstantExpression.Generated</InterceptorsNamespaces>
 	</PropertyGroup>
 
-	<!--<ItemGroup>
+	<ItemGroup>
 		<CompilerVisibleProperty Include="UseConstExpr" />
-	</ItemGroup>-->
+	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.12-preview" />
-		<!--<ProjectReference Include="..\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
+<!--		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.15-preview" />-->
+		<ProjectReference Include="..\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 </Project>
