--- a/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
+++ b/Vectorize/ConstExpr.Sample/ConstExpr.Sample.csproj
@@ -18,7 +18,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-<!--		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.15-preview" />-->
+<!--		<PackageReference Include="ConstExpr.SourceGenerator" Version="0.1.16-preview" />-->
+		<ProjectReference Include="..\ConstExpr.Core\ConstExpr.Core.csproj" />
 		<ProjectReference Include="..\ConstExpr.SourceGenerator\ConstExpr.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
