--- a/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
+++ b/Vectorize/ConstExpr.SourceGenerator/ConstExpr.SourceGenerator.csproj
@@ -12,7 +12,7 @@
 		<RootNamespace>ConstExpr.SourceGenerator</RootNamespace>
 
 		<PackageId>ConstExpr.SourceGenerator</PackageId>
-		<Version>0.1.15-preview</Version>
+		<Version>0.1.16-preview</Version>
 		<Authors>JanTamis</Authors>
 		<Company>JanTamis</Company>
 		<Description>A source generator that provides constant expression optimizations</Description>
@@ -87,6 +87,8 @@
 		<ProjectReference Include="..\..\SourceGen.Utilities\SourceGen.Utilities.csproj">
 			<PrivateAssets>all</PrivateAssets>
 		</ProjectReference>
+		<!-- New Core reference (public so NuGet picks it up as dependency) -->
+		<ProjectReference Include="..\ConstExpr.Core\ConstExpr.Core.csproj" />
 
 		<None Remove="bin\Debug\netstandard2.0\\ConstExpr.SourceGenerator.dll" />
 		
