Update .gitignore and improve code logic in tests
- Added paths to .gitignore for Vectorize/ConstExpr.Core build artifacts.
- Commented out Fibonacci output in Main.cs for clarity.
- Modified Fibonacci sequence generation in Test.cs for correctness.
- Enhanced sieve algorithm readability in Test.cs by adding braces.
- Added return statement for ratio calculation in Test.cs.
- Updated IsSame method in SpanExtensions.cs to prevent null reference errors.

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@
 /ConstExpr.Tests/bin/Release/net9.0
 /SourceGen.Utilities/bin/Release/netstandard2.0
 /Vectorize/ConstExpr.SourceGenerator/bin
+/Vectorize/ConstExpr.Core/bin/Debug/netstandard2.0
+/Vectorize/ConstExpr.Core/obj/Debug/netstandard2.0
+/Vectorize/ConstExpr.Core/obj
